<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martin.codestar.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:showDividers="middle|beginning">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                style="@style/label"
                android:id="@+id/label_user_one"
                android:hint="@string/user_one"
                android:labelFor="@id/input_user_one">
                <android.support.design.widget.TextInputEditText
                    style="@style/input"
                    android:id="@+id/input_user_one"
                    android:text="@string/insert_github_user"

                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                style="@style/label"
                android:id="@+id/label_user_two"
                android:hint="@string/user_two"
                android:labelFor="@id/input_user_two">
                <android.support.design.widget.TextInputEditText
                    style="@style/input"
                    android:id="@+id/input_user_two"
                    android:text="@string/insert_github_user"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_start_margin"
            android:text="@string/start" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/winner_view_margin"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winner"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
